agregué ultimos retoques de ceo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="La Cocina de Guille: tu recetario online con recetas fáciles, populares y novedades gastronómicas para inspirar cada comida.">
+    <meta name="keywords" content="recetas fáciles, recetas populares, cocina casera, novedades gastronómicas, La Cocina de Guille">
     <!-- aos -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -158,29 +160,29 @@
             <div class="cards-container">
 
                 <article class="recipe-card" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="500">
-                    <img src="./assetsProyecto/melopita.png" alt="Melopita, un dulce griego con alma casera"
+                    <img src="./assetsProyecto/pollo-al-horno.jpg" alt="Receta de Pollo al Horno"
                         class="recipe-card__image">
                     <div class="recipe-card__content">
-                        <h3 class="recipe-card__title">Melopita</h3>
-                        <p class="recipe-card__description">Un dulce griego con alma casera</p>
+                        <h3 class="recipe-card__title">Pollo al Horno</h3>
+                        <p class="recipe-card__description">Jugoso pollo al horno con un toque de hierbas aromáticas.</p>
                     </div>
                 </article>
 
                 <article class="recipe-card" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="500">
-                    <img src="./assetsProyecto/Makroud.png" alt="Makroud, dulce tradicional del Magreb"
+                    <img src="./assetsProyecto/ensalada-fresca.jpg" alt="Receta de Ensalada Fresca mediterránea"
                         class="recipe-card__image">
                     <div class="recipe-card__content">
-                        <h3 class="recipe-card__title">Makroud</h3>
-                        <p class="recipe-card__description">Tradición dulce del Magreb</p>
+                        <h3 class="recipe-card__title">Ensalada Mediterránea</h3>
+                        <p class="recipe-card__description">Una ensalada refrescante y saludable</p>
                     </div>
                 </article>
 
                 <article class="recipe-card" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="500">
-                    <img src="./assetsProyecto/kunefe.png" alt="Künefe, postre crujiente del Medio Oriente"
+                    <img src="./assetsProyecto/pizza-casera.jpg" alt="Receta de Pizza Casera"
                         class="recipe-card__image">
                     <div class="recipe-card__content">
-                        <h3 class="recipe-card__title">Künefe</h3>
-                        <p class="recipe-card__description">Un crujiente tesoro del Medio Oriente</p>
+                        <h3 class="recipe-card__title">Pizza Estilo Napolitano</h3>
+                        <p class="recipe-card__description">La mejor pizza hecha en casa, con una masa perfecta</p>
                     </div>
                 </article>
 
