--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Descubrí quiénes somos en La Cocina de Guille, nuestra historia, valores y pasión por crear recetas que conquistan paladares.">
+    <meta name="keywords" content="La Cocina de Guille, historia, equipo, pasión por la cocina, valores gastronómicos">
     <!-- aos -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
