--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Encontrá recetas de La Cocina de Guille para todos los gustos: platos tradicionales, ideas saludables y propuestas creativas paso a paso."> 
+    <meta name="keywords" content="recetas tradicionales, recetas saludables, recetas creativas, paso a paso, La Cocina de Guille">
     <!-- aos -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -117,7 +119,7 @@
                     </div>
                 </div>
                 <div class="recipe-card" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="500">
-                    <img src="../assetsProyecto/ensalada-fresca.jpg" alt="Receta de Ensalada Fresca" class="recipe-card__image">
+                    <img src="../assetsProyecto/ensalada-fresca.jpg" alt="Receta de Ensalada Fresca mediterránea" class="recipe-card__image">
                     <div class="recipe-card__content">
                         <h3 class="recipe-card__title">Ensalada Mediterránea</h3>
                         <p class="recipe-card__description">Una ensalada refrescante y saludable con ingredientes
