--- a/pages/testimonios.html
+++ b/pages/testimonios.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Opiniones reales sobre La Cocina de Guille: experiencias, comentarios y recomendaciones de quienes probaron nuestras recetas.">
+    <meta name="keywords" content="testimonios, opiniones, experiencias, comentarios, recomendaciones, La Cocina de Guille">
     <!-- aos -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
