--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contactá a La Cocina de Guille para consultas, colaboraciones o sugerencias y unite a nuestra comunidad gastronómica.">
+    <meta name="keywords" content="contacto La Cocina de Guille, consultas, colaboraciones, sugerencias, comunidad gastronómica">
     <!-- aos -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
